2010-03-08  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.csproj: Make it a real 3.5 project.

2010-03-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Added some insanity checks.

2010-03-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/LineSegment.cs: Added bounds check.

2010-03-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 584884 - Find
	  markers render over line numbers'.

2010-03-02  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Worked on 'Bug 584479 -
	  Exception while undoing'.

2010-03-02  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: added
	  some debug code.

2010-03-01  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Finishing old parser thread
	  before starting a new one.

2010-03-01  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GutterMargin.cs: Fixed 'Bug 571337 - if a
	  section of code is collapsed in monodevelop, when you select
	  and copy, it only gets the top line'.

2010-02-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor.Highlighting/SemanticRule.cs: Re-activated
	  url marker.

2010-02-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 583459 - When
	  the fold marker very wide, preview shows offscrre'.

2010-02-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor/CodeSegmentEditorWindow.cs:
	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Fixed 'Bug
	  583461 - Fold preview scrolling is strange'.


2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ISearchEngine.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: