@@ -1,0 +1,65 @@
+<!--
+
+JaySyntaxMode.xml
+ 
+Author:
+      Mike Krüger <mkrueger@novell.com>
+
+Copyright (c) 2010 Novell, Inc (http://www.novell.com)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+-->
+
+<SyntaxMode name = "Jay" mimeTypes="text/x-jay" extends="text/x-csharp">
+	<Property name="LineComment">//</Property>
+	<Property name="BlockCommentStart">/*</Property>
+	<Property name="BlockCommentEnd">*/</Property>
+	
+	<EolSpan color = "comment.line" rule="Comment" tagColor="comment.tag.line">//</EolSpan>
+	
+	<Span color = "comment.block" rule="Comment" tagColor="comment.tag.block">
+		<Begin>/*</Begin>
+		<End>*/</End>
+	</Span>
+	
+	<EolSpan color = "text.preprocessor" rule="token">%token</EolSpan>
+	<EolSpan color = "text.preprocessor" rule="token">%nonassoc</EolSpan>
+	<EolSpan color = "text.preprocessor" rule="token">%left</EolSpan>
+	<EolSpan color = "text.preprocessor" rule="token">%right</EolSpan>
+	<EolSpan color = "text.preprocessor" rule="token">%start</EolSpan>
+	<EolSpan color = "text.preprocessor" rule="token">%%</EolSpan>
+	
+	<Rule name = "Comment">
+		<Keywords color="comment.keyword.todo" ignorecase="True">
+			<Word>TODO</Word>
+			<Word>FIXME</Word>
+			<Word>HACK</Word>
+			<Word>UNDONE</Word>
+		</Keywords>
+	</Rule>
+	
+	<Rule name = "token">
+		<EolSpan color = "comment.line" rule="Comment" tagColor="comment.tag.line">//</EolSpan>
+		
+		<Span color = "comment.block" rule="Comment" tagColor="comment.tag.block">
+			<Begin>/*</Begin>
+			<End>*/</End>
+		</Span>
+	</Rule>
+</SyntaxMode>
